--- a/styles.css
+++ b/styles.css
@@ -1,312 +1,319 @@
-@font-face{
-	font-family: Asap-Bold;
-	src:url("fonts/Asap-Bold.ttf");
-}
+	@font-face{
+		font-family: Asap-Bold;
+		src:url("fonts/Asap-Bold.ttf");
+	}
 
-@font-face{
-	font-family: Asap-Regular;
-	src:url("fonts/Asap-Regular.ttf");
-} 
+	@font-face{
+		font-family: Asap-Regular;
+		src:url("fonts/Asap-Regular.ttf");
+	} 
 
-nav {
-    float: left;
-}
+	nav {
+	    float: left;
+	}
 
-nav a {
-    color: black;
-    text-align: center;
-    padding: 10px;
-    text-decoration: none;
-    font-family: Asap-Bold;
-    font-size: 18pt;
-}
-nav a:hover {
-    background-color: #111;
-}
-	
-header,footer{
-	text-align: center;
-	margin-top: 10px;
-}
+	nav a {
+	    color: black;
+	    text-align: center;
+	    padding: 10px;
+	    text-decoration: none;
+	    font-family: Asap-Bold;
+	    font-size: 18pt;
+	}
+	nav a:hover {
+	    background-color: #111;
+	}
+		
+	header,footer{
+		text-align: center;
+		margin-top: 10px;
+	}
 
-.container{
-	display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.logos{
-	float: right;
-}
+	.container{
+		display: flex;
+	    justify-content: space-around;
+	    align-items: center;
+	}
+	.logos{
+		float: right;
+	}
 
-.active{
-	color: #333333;
-}
+	.active{
+		color: #333333;
+	}
 
-.inactive{
-	color: #999999;
-}
+	.inactive{
+		color: #999999;
+	}
 
-.main1{
-	background-image: url("images/bg1_repeat.png");
-}
+	.main1{
+		background-image: url("images/bg1_repeat.png");
+	}
 
-.main2{
-	align-items: center;
-	text-align: center;
-	background-color: #ffffff;
-}
+	.main2{
+		align-items: center;
+		text-align: center;
+		background-color: #ffffff;
+	}
 
-.main3and4{
-	padding-top: 100px;
-	padding-bottom: 100px;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	background-color: #f5f5f5;
-}
-
-
-.main3{
-	display: flex;
-	flex-direction: column;
-	background-color: #f5f5f5;
-	
-}
-
-.main4{
-	display: flex;
-	flex-direction: column;
-	background-color: #f5f5f5;
-	align-items: center;
-}
-
-.main5{
-	background-image: url("images/bg2.png");
-}
-
-.main6{
-	background-color:#333333;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	
-}
-.main6Sub{
-	display: flex;
-	flex-direction: row;
-
-}
-.stay{
-	font-family: Asap-Bold;
-	font-size: 52pt;
-	color: #ffffff;
-	text-align: center;
-	margin: 0;
-}
-
-.we{
-	font-family: Asap-Regular;
-	font-size: 24pt;
-	color: #ffffff;
-	text-align: center;
-
-}
-
-.coming{
-	font-family: Asap-Regular;
-	font-size: 16pt;
-	color: #ffffff;
-	text-align: center;
-
-}
-
-.down{
-	display: block;
-	margin: 0 auto;
-}
-
-.credentials{
-	text-align: center;
-}
-
-.email{
-	font-family: Asap-Regular;
-	text-align: center;
-	font-size: 20.3pt;
-	color: #ffffff;
-	width: 269px;
-	height: 60px;
-	background-color: rgba(255,255,255,0.3);
-	border-top-left-radius: 30px;
-	border-bottom-left-radius: 30px;
-	margin: 0;
-	border:0;
-	padding:0;
-	outline: none;
-}
-
-.ok{
-	font-family: Asap-Regular;
-	font-size: 20.3pt;
-	color: #ffffff;
-	background-color: #2ecc71;
-	width: 81px;
-	height: 60px;
-	border-top-right-radius: 30px;
-	border-bottom-right-radius: 30px;
-	outline: none;
-	border:0;
-	margin-left: -4px;
-}
-
-body{
-	margin: 0;
-}
-
-.personalize{
-	text-align: center;
-	font-family: Asap-Bold;
-	font-size: 36pt;
-	color: #333333;
-}
-
-.choose{
-	text-align: center;
-	font-family: Asap-Regular;
-	font-size: 20pt;
-	color: #999999;
-}
+	.main3and4{
+		padding-top: 100px;
+		padding-bottom: 100px;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		background-color: #f5f5f5;
+	}
 
 
-.All{
-	font-family: Asap-Bold;
-	font-size: 36pt;
-	color: #333333;
-}
+	.main3{
+		display: flex;
+		flex-direction: column;
+		background-color: #f5f5f5;
+		
+	}
 
-.Follow{
-	font-family: Asap-Regular;
-	font-size: 20pt;
-	color: #999999;
-}
+	.main4{
+		display: flex;
+		flex-direction: column;
+		background-color: #f5f5f5;
+		align-items: center;
+	}
 
-.Be_the{
-	font-family: Asap-Bold;
-	font-size: 36pt;
-	color: #333333;
+	.main5{
+		background-image: url("images/bg2.png");
+	}
+
+	.main6{
+		background-color:#333333;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		
+	}
+	.main6Sub{
+		display: flex;
+		flex-direction: row;
+
+	}
+	.stay{
+		font-family: Asap-Bold;
+		font-size: 52pt;
+		color: #ffffff;
+		text-align: center;
+		margin: 0;
+	}
+
+	.we{
+		font-family: Asap-Regular;
+		font-size: 24pt;
+		color: #ffffff;
+		text-align: center;
+
+	}
+
+	.coming{
+		font-family: Asap-Regular;
+		font-size: 16pt;
+		color: #ffffff;
+		text-align: center;
+
+	}
+
+	.down{
+		display: block;
+		margin: 0 auto;
+	}
+
+	.credentials{
+		text-align: center;
+	}
+
+	.email{
+		font-family: Asap-Regular;
+		text-align: center;
+		font-size: 20.3pt;
+		color: #ffffff;
+		width: 269px;
+		height: 60px;
+		background-color: rgba(255,255,255,0.3);
+		border-top-left-radius: 30px;
+		border-bottom-left-radius: 30px;
+		margin: 0;
+		border:0;
+		padding:0;
+		outline: none;
+	}
+
+	.ok{
+		font-family: Asap-Regular;
+		font-size: 20.3pt;
+		color: #ffffff;
+		background-color: #2ecc71;
+		width: 81px;
+		height: 60px;
+		border-top-right-radius: 30px;
+		border-bottom-right-radius: 30px;
+		outline: none;
+		border:0;
+		margin-left: -4px;
+	}
+
+	body{
+		margin: 0;
+	}
+
+	.personalize{
+		text-align: center;
+		font-family: Asap-Bold;
+		font-size: 36pt;
+		color: #333333;
+	}
+
+	.choose{
+		text-align: center;
+		font-family: Asap-Regular;
+		font-size: 20pt;
+		color: #999999;
+	}
+
+
+	.All{
+		font-family: Asap-Bold;
+		font-size: 36pt;
+		color: #333333;
+	}
+
+	.Follow{
+		font-family: Asap-Regular;
+		font-size: 20pt;
+		color: #999999;
+	}
+
+	.Be_the{
+		font-family: Asap-Bold;
+		font-size: 36pt;
+		color: #333333;
+		text-align: right;
+	}
+
+	.Get_push{
+		font-family: Asap-Regular;
+		font-size: 20pt;
+		color: #999999;
+		text-align: right;
+	}
+
+	.column1{
+		padding-top: 100px;
+	}
+
+	.illustration1{
 	text-align: right;
-}
+	}
 
-.Get_push{
-	font-family: Asap-Regular;
-	font-size: 20pt;
-	color: #999999;
-	text-align: right;
-}
+	.illustration2{
+		padding-top: 30px;
+	}
 
-.column1{
-	padding-top: 100px;
-}
+	.The_first{
+		font-family: Asap-Regular;
+		font-size: 24pt;
+		color: #ffffff;
+		text-align: center;
+	}
 
-.illustration1{
-text-align: right;
-}
+	.up{
+		font-family: Asap-Bold;
+		font-size: 48pt;
+		color: #ffffff;
+		padding-top: 40px;
+		margin-left: -70px;
+		
+	}
 
-.illustration2{
-	padding-top: 30px;
-}
+	.hand{
+		padding-top: 20px;
+		
+	}
 
-.The_first{
-	font-family: Asap-Regular;
-	font-size: 24pt;
-	color: #ffffff;
-	text-align: center;
-}
+	.about_why{
+		display: flex;
+		flex-direction: row;
+		margin-top: 80px;
+		margin-bottom: 80px;
+		align-items: center;
+		text-align: left;
+		justify-content: space-around;
+	}
 
-.up{
-	font-family: Asap-Bold;
-	font-size: 48pt;
-	color: #ffffff;
-	padding-top: 40px;
-	margin-left: -70px;
-	
-}
+	.Why_we{
+		font-family: Asap-Bold;
+		font-size: 38pt;
+		color: #333333;
+	}
 
-.hand{
-	padding-top: 20px;
-	
-}
+	.We_believe{
+		font-family: Asap-Regular;
+		font-size: 20pt;
+		color: #999999;
+	}
 
-.about_why{
-	display: flex;
-	flex-direction: row;
-	margin-top: 80px;
-	margin-bottom: 80px;
-	align-items: center;
-	text-align: left;
-	justify-content: space-around;
-}
+	.HeaderEnd{
+		height: 2px;
+		background-color: #f5f5f5;
+	}
 
-.Why_we{
-	font-family: Asap-Bold;
-	font-size: 38pt;
-	color: #333333;
-}
-
-.We_believe{
-	font-family: Asap-Regular;
-	font-size: 20pt;
-	color: #999999;
-}
-
-.HeaderEnd{
-	height: 2px;
-	background-color: #f5f5f5;
-}
-
-.lookingFor{
-	align-items: center;
-	text-align: center;
-}
+	.lookingFor{
+		align-items: center;
+		text-align: center;
+	}
 
 
-.looking{
-	font-family: Asap-Bold;
-	font-size: 36pt;
-	color: #333333;
-	text-align: center;
-}
+	.looking{
+		font-family: Asap-Bold;
+		font-size: 36pt;
+		color: #333333;
+		text-align: center;
+	}
 
-.awesomeProduct{
-	font-family: Asap-Regular;
-	font-size: 20pt;
-	color: #999999;
-	text-align: center;
-}
+	.awesomeProduct{
+		font-family: Asap-Regular;
+		font-size: 20pt;
+		color: #999999;
+		text-align: center;
+	}
 
 
-::-webkit-input-placeholder {
- /* Chrome/Opera/Safari */ color: #ffffff;
-  }
+	::-webkit-input-placeholder {
+	 /* Chrome/Opera/Safari */ 
+	 color: #ffffff;
+	 font-family: Asap-Regular;
+	 font-size: 20.3pt;
+	  }
 
-::-moz-placeholder {
- /* Firefox 19+ */ color: #ffffff;
-  } 
+	::-moz-placeholder {
+	 /* Firefox 19+ */ 
+	 color: #ffffff;
+	 color: #ffffff;
+	 font-family: Asap-Regular;
+	 font-size: 20.3pt;
+	  } 
 
-.aboutEmail{
-	margin-top: 15px;
-	text-align: center;
-	background-color: #2ecc71;
-	color: #ffffff;
-	font-family: Asap-Regular;
-	font-size: 20.3pt;
-	height: 60px;
-	width: 310px;
-	border-top-right-radius: 30px;
-	border-bottom-right-radius: 30px;
-	border-top-left-radius: 30px;
-	border-bottom-left-radius: 30px;
-	margin-bottom: 100px;
-	outline: none;
-	border: 0;
-}
+	.aboutEmail{
+		margin-top: 15px;
+		text-align: center;
+		background-color: #2ecc71;
+		color: #ffffff;
+		font-family: Asap-Regular;
+		font-size: 20.3pt;
+		height: 60px;
+		width: 310px;
+		border-top-right-radius: 30px;
+		border-bottom-right-radius: 30px;
+		border-top-left-radius: 30px;
+		border-bottom-left-radius: 30px;
+		margin-bottom: 100px;
+		outline: none;
+		border: 0;
+	}
