--- a/styles.css
+++ b/styles.css
@@ -266,6 +266,7 @@ text-align: right;
 	font-size: 24pt;
 	color: #ffffff;
 	text-align: center;
+	max-width: 1024px;
 	width: 100%;
     margin: auto;
     padding-top: 40px;
